--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "jonathanbyrne.net",
   "version": "1.1.0",
+  "engines": {
+    "node": ">18"
+  },
   "devDependencies": {
     "rollup": "1.12.0",
     "rollup-plugin-commonjs": "10.0.0",
